--- a/_modules/airflow_config/configuration/base.html
+++ b/_modules/airflow_config/configuration/base.html
@@ -448,8 +448,12 @@
         <span class="n">dir_path</span> <span class="o">=</span> <span class="n">Path</span><span class="p">(</span><span class="nb">dir</span><span class="p">)</span>
         <span class="n">dir_path</span><span class="o">.</span><span class="n">mkdir</span><span class="p">(</span><span class="n">parents</span><span class="o">=</span><span class="kc">True</span><span class="p">,</span> <span class="n">exist_ok</span><span class="o">=</span><span class="kc">True</span><span class="p">)</span>
         <span class="k">for</span> <span class="n">dag_id</span><span class="p">,</span> <span class="n">dag</span> <span class="ow">in</span> <span class="bp">self</span><span class="o">.</span><span class="n">dags</span><span class="o">.</span><span class="n">items</span><span class="p">():</span>
-            <span class="n">dag_path</span> <span class="o">=</span> <span class="n">dir_path</span> <span class="o">/</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">dag_id</span><span class="si">}</span><span class="s2">.py&quot;</span>
-            <span class="n">dag_path</span><span class="o">.</span><span class="n">write_text</span><span class="p">(</span><span class="n">dag</span><span class="o">.</span><span class="n">render</span><span class="p">())</span></div>
+            <span class="k">if</span> <span class="n">dag</span><span class="o">.</span><span class="n">tasks</span><span class="p">:</span>
+                <span class="n">dag_path</span> <span class="o">=</span> <span class="n">dir_path</span> <span class="o">/</span> <span class="sa">f</span><span class="s2">&quot;</span><span class="si">{</span><span class="n">dag_id</span><span class="si">}</span><span class="s2">.py&quot;</span>
+                <span class="n">rendered</span> <span class="o">=</span> <span class="n">dag</span><span class="o">.</span><span class="n">render</span><span class="p">()</span>
+                <span class="k">if</span> <span class="n">dag_path</span><span class="o">.</span><span class="n">exists</span><span class="p">()</span> <span class="ow">and</span> <span class="n">dag_path</span><span class="o">.</span><span class="n">read_text</span><span class="p">()</span> <span class="o">==</span> <span class="n">rendered</span><span class="p">:</span>
+                    <span class="k">continue</span>
+                <span class="n">dag_path</span><span class="o">.</span><span class="n">write_text</span><span class="p">(</span><span class="n">rendered</span><span class="p">)</span></div>
 </div>
 
 
