--- a/genindex.html
+++ b/genindex.html
@@ -329,6 +329,8 @@
     <td style="width: 33%; vertical-align: top;"><ul>
         <li><a href="docs/src/_build/airflow_config.generate_dag_id.html#airflow_config.generate_dag_id">generate_dag_id() (in module airflow_config)</a>
 </li>
+        <li><a href="docs/src/_build/airflow_config.Configuration.html#airflow_config.Configuration.generate_in_mem">generate_in_mem() (airflow_config.Configuration method)</a>
+</li>
     </ul></td>
   </tr></table>
 </section>
